--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,33 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world. I'm Siyuan !：)"/>
-</f:view>
+<h:body>
+    <ui:composition template="templates/layout.xhtml">
+
+        <ui:define name="title">Third laboratory work</ui:define>
+
+        <ui:define name="header">
+            <ui:include src="templates/header.xhtml"/>
+        </ui:define>
+
+        <ui:define name="content">
+            <div class="current-time">
+                <div class="clock">
+                    <ui:include src="templates/clock.html"/>
+                </div>
+                <div class="date">
+                    <span class="date"/>
+                </div>
+            </div>
+
+            <div class="link-button">
+                <h:link outcome="main">Main page</h:link>
+            </div>
+        </ui:define>
+
+        <ui:define name="scripts">
+            <h:outputScript library="js" name="index.js"/>
+        </ui:define>
+    </ui:composition>
+</h:body>
 </html>
