--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -13,7 +13,9 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
+
 <h:body>
     <ui:composition template="templates/layout.xhtml"> <!-- Only something in this tag will be showed! -->
 
@@ -29,33 +31,25 @@
 
                 <div class="x-value">   <!-- We can change "x-text" to change words' style -->
                     <div class="h5">X value:</div>
-                    <h:commandLink id="x-3" name="x-commandLink" value="-3" action="#{pointsBean.setX(-3)}">
-                        <h:outputText value="-3" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x-2" name="x-commandLink" value="-2" action="#{pointsBean.setX(-2)}">
-                        <h:outputText value="-2" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x-1" name="x-commandLink" value="-1" action="#{pointsBean.setX(-1)}">
-                        <h:outputText value="-1" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x0" name="x-commandLink" value="0" action="#{pointsBean.setX(0)}">
-                        <h:outputText value="0" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x1" name="x-commandLink" value="1" action="#{pointsBean.setX(1)}">
-                        <h:outputText value="1" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x2" name="x-commandLink" value="2" action="#{pointsBean.setX(2)}">
-                        <h:outputText value="2" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x3" name="x-commandLink" value="3" action="#{pointsBean.setX(3)}">
-                        <h:outputText value="3" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x4" name="x-commandLink" value="4" action="#{pointsBean.setX(4)}">
-                        <h:outputText value="4" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
-                    <h:commandLink id="x5" name="x-commandLink" value="5" action="#{pointsBean.setX(5)}">
-                        <h:outputText value="5" styleClass="x-text" for="x-3"></h:outputText>
-                    </h:commandLink>
+
+                    <p:commandLink id="x-3" value="-3" styleClass="xbtn" action="#{pointsBean.setX(-3)}"></p:commandLink>
+
+                    <p:commandLink id="x-2" value="-2" styleClass="xbtn" action="#{pointsBean.setX(-2)}"></p:commandLink>
+
+                    <p:commandLink id="x-1" value="-1" styleClass="xbtn" action="#{pointsBean.setX(-1)}"></p:commandLink>
+
+                    <p:commandLink id="x0" value="0" styleClass="xbtn" action="#{pointsBean.setX(0)}"></p:commandLink>
+
+                    <p:commandLink id="x1" value="1" styleClass="xbtn" action="#{pointsBean.setX(1)}"></p:commandLink>
+
+                    <p:commandLink id="x2" value="2" styleClass="xbtn" action="#{pointsBean.setX(2)}"></p:commandLink>
+
+                    <p:commandLink id="x3" value="3" styleClass="xbtn" action="#{pointsBean.setX(3)}"></p:commandLink>
+
+                    <p:commandLink id="x4" value="4" styleClass="xbtn" action="#{pointsBean.setX(4)}"></p:commandLink>
+
+                    <p:commandLink id="x5" value="5" styleClass="xbtn" action="#{pointsBean.setX(5)}"></p:commandLink>
+
 
                     <div class="invalid-x d-none h5" style="color: red">
                         Please choose x.
@@ -64,14 +58,14 @@
 
                 <div class="y-value">
                     <div class="h5">Y value:</div>
-                    <h:inputText id="y" name="y-text" a:placeholder="Value in [-5..5]"
+                    <p:inputText id="y" name="y-text" a:placeholder="Value in [-5..5]"
                                  converterMessage="Y must be number..."
                                  styleClass="y" value="#{pointsBean.y}"
-                                 validatorMessage="Y must be number between -3 and 3. If you want more, please lick the svg"
-                                 required="true" requiredMessage="Y is required" maxlength="17">
+                                 validatorMessage="Y must be number between -5 and 5. If you want more, please lick the svg"
+                                 required="true" requiredMessage="Y is required" maxlength="17" >
                         <f:validateDoubleRange minimum="-5" maximum="5"/>
-                    </h:inputText>
-                    <h:message for="y" style="color: red"/>
+                    </p:inputText>
+                    <p:message for="y" style="color: red"/>
                     <div class="invalid-y d-none h5" style="color: red">
                         Y must be number...
                     </div>
@@ -80,37 +74,37 @@
                 <!--We don't need to set "selected" attribute. Rendered output will set it on the first option-->
                 <div class="r-value">
                     <div class="h5">R value:</div>
-                    <h:selectOneRadio value="#{pointsBean.r}">
+                    <p:selectOneRadio value="#{pointsBean.r}">
                         <f:selectItem itemValue="1" itemLabel="1" styleClass="r-text"/>
                         <f:selectItem itemValue="1.5" itemLabel="1.5" styleClass="r-text"/>
                         <f:selectItem itemValue="2" itemLabel="2" styleClass="r-text"/>
                         <f:selectItem itemValue="2.5" itemLabel="2.5" styleClass="r-text"/>
                         <f:selectItem itemValue="3" itemLabel="3" styleClass="r-text"/>
-                    </h:selectOneRadio>
+                    </p:selectOneRadio>
                 </div>
 
                 <div class="control-buttons mt-3 row">
 
                     <div class="my-3 col-sm">
-                        <h:commandButton styleClass="btn btn-primary btn-lg submit-btn" value="Submit"
+                        <p:commandButton styleClass="btn btn-primary btn-lg submit-btn" value="Submit"
                                          type="submit"
                                          action="#{pointsBean.addPointFromFields}">
-                        </h:commandButton>
+                        </p:commandButton>
                     </div>
 
                     <div class="my-3 col-sm">
-                        <h:commandButton styleClass="btn btn-primary btn-lg clear-form-btn"
+                        <p:commandButton styleClass="btn btn-primary btn-lg clear-form-btn"
                                          value="Clear form"
                                          type="button"/>
                     </div>
 
                     <div class="my-3 col-sm">
-                        <h:commandButton styleClass="btn btn-primary btn-lg clear-table-btn"
+                        <p:commandButton styleClass="btn btn-primary btn-lg clear-table-btn"
                                          value="Clear table"
                                          type="button"
                                          action="#{pointsBean.clearTable}">
                             <f:ajax render="results-table"/>
-                        </h:commandButton>
+                        </p:commandButton>
                     </div>
                 </div>
             </h:form>
