--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -32,23 +32,32 @@
                 <div class="x-value">   <!-- We can change "x-text" to change words' style -->
                     <div class="h5">X value:</div>
 
-                    <p:commandLink id="x-3" value="-3" styleClass="xbtn" action="#{pointsBean.setX(-3)}"></p:commandLink>
+                    <p:commandLink id="x-3" value="-3" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x-2" value="-2" styleClass="xbtn" action="#{pointsBean.setX(-2)}"></p:commandLink>
+                    <p:commandLink id="x-2" value="-2" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x-1" value="-1" styleClass="xbtn" action="#{pointsBean.setX(-1)}"></p:commandLink>
+                    <p:commandLink id="x-1" value="-1" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x0" value="0" styleClass="xbtn" action="#{pointsBean.setX(0)}"></p:commandLink>
+                    <p:commandLink id="x0" value="0" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x1" value="1" styleClass="xbtn" action="#{pointsBean.setX(1)}"></p:commandLink>
+                    <p:commandLink id="x1" value="1" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x2" value="2" styleClass="xbtn" action="#{pointsBean.setX(2)}"></p:commandLink>
+                    <p:commandLink id="x2" value="2" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x3" value="3" styleClass="xbtn" action="#{pointsBean.setX(3)}"></p:commandLink>
+                    <p:commandLink id="x3" value="3" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x4" value="4" styleClass="xbtn" action="#{pointsBean.setX(4)}"></p:commandLink>
+                    <p:commandLink id="x4" value="4" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
-                    <p:commandLink id="x5" value="5" styleClass="xbtn" action="#{pointsBean.setX(5)}"></p:commandLink>
+                    <p:commandLink id="x5" value="5" styleClass="xbtn"
+                                   actionListener="#{pointsBean.toggle}"></p:commandLink>
 
 
                     <div class="invalid-x d-none h5" style="color: red">
@@ -61,8 +70,8 @@
                     <p:inputText id="y" name="y-text" a:placeholder="Value in [-5..5]"
                                  converterMessage="Y must be number..."
                                  styleClass="y ui-inputtext" value="#{pointsBean.y}"
-                                 validatorMessage="Y must be number between -5 and 5. If you want more, please lick the svg"
-                                 required="true" requiredMessage="Y is required" maxlength="17" >
+                                 validatorMessage="Y must be number between -5 and 5. If you want more, please click the svg"
+                                 requiredMessage="Y is required" maxlength="17">
                         <f:validateDoubleRange minimum="-5" maximum="5"/>
                     </p:inputText>
                     <p:message for="y" style="color: red"/>
@@ -74,12 +83,13 @@
                 <!--We don't need to set "selected" attribute. Rendered output will set it on the first option-->
                 <div class="r-value">
                     <div class="h5">R value:</div>
-                    <h:selectOneRadio value="#{pointsBean.r}" styleClass="radio r-radio" required="true">
-                        <f:selectItem itemValue="1" itemLabel="1" styleClass="r-text" />
+                    <h:selectOneRadio value="#{pointsBean.r}" styleClass="radio r-radio">
+                        <f:selectItem itemValue="1" itemLabel="1" styleClass="r-text"/>
                         <f:selectItem itemValue="1.5" itemLabel="1.5" styleClass="r-text"/>
-                        <f:selectItem itemValue="2" itemLabel="2" styleClass="r-text" checked="true"/>
+                        <f:selectItem itemValue="2" itemLabel="2" styleClass="r-text"/>
                         <f:selectItem itemValue="2.5" itemLabel="2.5" styleClass="r-text"/>
                         <f:selectItem itemValue="3" itemLabel="3" styleClass="r-text"/>
+                        <f:ajax render="graphicsPart"/>
                     </h:selectOneRadio>
                 </div>
 
@@ -88,8 +98,9 @@
                     <div class="my-3 col-sm">
                         <p:commandButton styleClass="btn btn-primary btn-lg submit-btn" value="Submit"
                                          type="submit"
-                                         action="#{pointsBean.addPointFromFields}" onclick="drawPointsFromTable()">
-                            <f:ajax render="results-table"/>
+                                         action="#{pointsBean.addPointFromFields}"
+                                         onclick="drawPointsFromTable()">
+                            <f:ajax render="results-table graphicsPart"/>
                         </p:commandButton>
                     </div>
 
@@ -97,7 +108,6 @@
                         <p:commandButton styleClass="btn btn-primary btn-lg clear-form-btn"
                                          value="Clear form"
                                          onclick="clearForm()"
-                                         action="#{pointsBean.setR(0)}"
                                          type="button"/>
                     </div>
 
@@ -127,7 +137,8 @@
 
             <div class="text-center my-3">
                 <div class="h4">Results</div>
-                <h:dataTable styleClass="table table-bordered" value="#{pointsBean.allPoints}" var="point" id="results-table">
+                <h:dataTable styleClass="table table-bordered" value="#{pointsBean.allPoints}" var="point"
+                             id="results-table">
 
                     <h:column>
                         <f:facet name="header">X</f:facet>
@@ -164,6 +175,7 @@
         <ui:define name="scripts">
             <h:outputScript library="js" name="graphics.js"/>
             <h:outputScript library="js" name="main.js"/>
+            <h:outputScript library="js" name="jquery.js"/>
         </ui:define>
 
     </ui:composition>
