--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -125,9 +125,9 @@
 
             <!--Hidden form is for clicking svg-->
             <h:form styleClass="d-none hidden-form">
-                <h:inputText styleClass="x-hidden" value="#{pointsBean.hidden_x}"/>
-                <h:inputText styleClass="y-hidden" value="#{pointsBean.hidden_y}"/>
-                <h:inputText styleClass="r-hidden" value="#{pointsBean.hidden_r}"/>
+                <h:inputText styleClass="x-hidden" value="#{pointsBean.hiddenX}"/>
+                <h:inputText styleClass="y-hidden" value="#{pointsBean.hiddenY}"/>
+                <h:inputText styleClass="r-hidden" value="#{pointsBean.hiddenR}"/>
                 <h:commandButton type="submit" styleClass="hidden-submit-btn"
                                  action="#{pointsBean.addPointFromHiddenForm}"/>
             </h:form>
@@ -138,7 +138,7 @@
 
             <div class="text-center my-3">
                 <div class="h4">Results</div>
-                <h:dataTable styleClass="table table-bordered" value="#{pointsBean.allPoints}" var="point"
+                <h:dataTable styleClass="table table-bordered" value="#{pointsBean.pointsFromDB}" var="point"
                              id="results-table">
 
                     <h:column>
