Your ROLEX is coming!

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -29,6 +29,7 @@
         </ui:define>
 
         <ui:define name="scripts">
+            <h:outputScript library="js" name="jquery.js"/>
             <h:outputScript library="js" name="index.js"/>
         </ui:define>
     </ui:composition>
