--- a/src/main/webapp/testPage.html
+++ b/src/main/webapp/testPage.html
@@ -6,9 +6,33 @@
 
 </head>
 <body>
-<script>
-    alert("ok")
-    console.log("Like alert?");
-</script>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300">
+    <!--  background  -->
+    <!--    <circle id="face" cx="150" cy="150" r="145" fill="#fff" stroke="#fff" stroke-width="3"/>-->
+
+    <!--    &lt;!&ndash;  numbers  &ndash;&gt;-->
+    <!--    <text x="138" y="26" font-size="24" font-weight="bold">12</text>-->
+    <!--    <text x="208" y="44" font-size="24" font-weight="bold">1</text>-->
+    <!--    <text x="256" y="91" font-size="24" font-weight="bold">2</text>-->
+    <!--    <text x="277" y="156" font-size="24" font-weight="bold">3</text>-->
+    <!--    <text x="256" y="221" font-size="24" font-weight="bold">4</text>-->
+    <!--    <text x="207" y="269" font-size="24" font-weight="bold">5</text>-->
+    <!--    <text x="143" y="285" font-size="24" font-weight="bold">6</text>-->
+    <!--    <text x="79" y="269" font-size="24" font-weight="bold">7</text>-->
+    <!--    <text x="31" y="221" font-size="24" font-weight="bold">8</text>-->
+    <!--    <text x="12" y="158" font-size="24" font-weight="bold">9</text>-->
+    <!--    <text x="28" y="91" font-size="24" font-weight="bold">10</text>-->
+    <!--    <text x="77" y="43" font-size="24" font-weight="bold">11</text>-->
+
+    <image href="resources/pic/ROLEX.png" height="290" width="290" alt="Oh Lost the picture!" x="6" y="7"/>
+<!--<img src="resources/pic/ROLEX.png"/>-->
+    <!--  hands  -->
+    <line id="hours" x1="150" y1="150" x2="150" y2="65" stroke="#000" stroke-width="4"/>
+    <line id="minutes" x1="150" y1="150" x2="150" y2="50" stroke="#000" stroke-width="4"/>
+    <line id="seconds" x1="150" y1="150" x2="150" y2="35" stroke="#000" stroke-width="4"/>
+    <circle cx="150" cy="150" r="5" fill="#fff"/>
+</svg>
+<script src="resources/js/index.js"></script>
 </body>
 </html>
