CSS is finally ready (still ugly)

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -18,13 +18,10 @@
                 <div class="clock">
                     <ui:include src="templates/clock.html"/>
                 </div>
-                <div class="date">
-                    <span class="date"/>
-                </div>
             </div>
 
             <div class="link-button">
-                <h:link outcome="main">Main page</h:link>
+                <h:link outcome="main" styleClass="btn-primary btn-lg">Main page</h:link>
             </div>
         </ui:define>
 
